<resources>
    <string name="app_name">FinTechify</string>
    <string name="log_out">Log Out</string>
    <string name="welcome">TextView</string>
    <string name="your_balance">Your Balance:</string>
    <string name="balance">{Balance}</string>
    <string name="expense_sheet">EXPENSE SHEET</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">WITHDRAWAL</string>
    <string name="interest">Interest</string>
    <string name="taxes">Taxes</string>
    <string name="salary_after_tax">SALARY AFTER TAX</string>
    <string name="back">back</string>
    <string name="every_month">Every Month</string>
    <string name="every_2_weeks">Every 2 Weeks</string>
    <string name="every_week">Every Week</string>
    <string name="every_day">Every Day</string>
    <string name="frequency">Frequency:</string>
    <string name="amount">Amount ($):</string>
    <string name="once">Once</string>
    <string name="tax_rate">Tax Rate (%):</string>
    <string name="calculate">Calculate</string>
    <string name="balance_after_taxes">Balance After Taxes:</string>
    <string name="balancetaxnumber">{BalanceTaxNumber}</string>
    <string name="interest_rate">Interest Rate (%):</string>
    <string name="interest_time_years">Interest Time (Years):</string>
    <string name="expenses">Expenses</string>
    <string name="sat">Salary After Tax</string>
    <string name="transfer">Transfer</string>
    <string name="receive">Transfer To:</string>
    <string name="username">Username</string>
    <string name="convert">Convert Currency</string>
    <string name="conversion_country">Currency Type:</string>
    <string name="welcome_name">Welcome, {name}</string>
    <string name="finance_news">Finance News</string>
    <string name="newBalance">{New Balance}</string>

    <string-array name="items">
        <item>Once</item>
        <item>Every day</item>
        <item>Once a week</item>
        <item>Twice a week</item>
        <item>Every 2 weeks</item>
    </string-array>

    <string-array name="countries">
        <item>CAD</item>
        <item>USD</item>
        <item>AUD</item>
        <item>BZD</item>
    </string-array>
</resources>